initial prject added

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-title: Projects
+title: Projekte
 permalink: /projects/
 weight: 1
-remote_projects: 
-  - git-for-wizards
-  - arduino-visitor-counter
+remote_projects:
+- hhn-c
 ---
 
 {% include projects/index.html %}
