--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,9 +2,10 @@
 layout: default
 title: Projekte
 permalink: /projects/
-weight: 1
+weight: 2
 remote_projects:
 - hhn-c
+- EIP-PlantUML
 ---
 
 {% include projects/index.html %}
