project link  fixed

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@ permalink: /projects/
 weight: 2
 remote_projects:
 - hhn-c
-- EIP-PlantUML
+- plantuml-stdlib/EIP-PlantUML
 ---
 
 {% include projects/index.html %}
