teaching section added, navigation updated

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Projekte
-permalink: /projects/
-weight: 3
+permalink: /projekte/
+weight: 4
 remote_projects:
 - hhn-c
 - plantuml-stdlib/EIP-PlantUML
