--- a/pages/lectures.html
+++ b/pages/lectures.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Vorlesungen
-permalink: /lectures/
-weight: 1
+permalink: /hochschule/vorlesungen/
+weight: 2
 remote_lectures:
 - hhn-seks
 - hhn-os
